--- a/src/scss/components/_gear-creator.scss
+++ b/src/scss/components/_gear-creator.scss
@@ -5,10 +5,11 @@
 
 .gear-creator {
   @extend .base-form;
+
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 6px 8px 6px 8px;
+  padding: 6px 8px;
 
   &__upper-section {
     display: grid;
@@ -35,6 +36,7 @@
 
   &__image {
     @extend .base-form__image;
+
     max-width: 64px;
     height: auto;
     margin: 0 0.5rem 0 auto;
