--- a/src/scss/components/_sound-settings.scss
+++ b/src/scss/components/_sound-settings.scss
@@ -5,7 +5,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 6px 8px 6px 8px;
+  padding: 6px 8px;
   
   &__content {
     flex: 1;
@@ -29,12 +29,12 @@
     gap: 8px;
     margin-bottom: 16px;
     padding-bottom: 8px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgb(0 0 0 / 10%);
   }
   
   /* Sound group */
   &__group {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgb(0 0 0 / 10%);
     margin-bottom: 12px;
     padding-bottom: 12px;
   }
