--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -3,9 +3,9 @@
 @use "../utils/mixins";
 
 @mixin box-shadow-hover {
-  box-shadow: 
-    0 0 0 1px rgba(255, 255, 255, 0.1),
-    inset 0 1px 3px rgba(0, 0, 0, 0.7);
+  box-shadow:
+    0 0 0 1px rgb(255 255 255 / 10%),
+    inset 0 1px 3px rgb(0 0 0 / 70%);
   @content; // Allow for customization
 }
 
@@ -19,20 +19,22 @@
   @include flex-center {
     // Nested content will be passed through
   }
+
   flex-direction: row;
   @content; // Allow for customization
 }
 
 @mixin input-base {
   @include mixins.grid-compliant-text-input;
+
   appearance: none;
-  -webkit-appearance: none;
   @content; // Allow for customization
 }
 
 // Block
 .base-form {
   overflow-y: auto;
+
   // margin: 0.5rem;
 
   // Block modifiers
@@ -56,8 +58,8 @@
     width: 100%;
     align-content: flex-start;
     font-size: 0.9rem;
-    color: #ffffff;
-  
+    color: #fff;
+
 
   &--warning {
     background-color: #e6b800;
@@ -78,6 +80,7 @@
   // Elements
   &__header {
     @include mixins.grid-compliant-section-header;
+
     // Override the mixin for any existing specific styles we want to keep
     text-align: center;
   }
@@ -85,11 +88,11 @@
   &__fieldset {
     @include mixins.grid-compliant-fieldset;
   }
-  
+
   &__collapsible-section {
     @include mixins.grid-compliant-collapsible-section;
   }
-  
+
   &__divider {
     @include mixins.grid-compliant-form-divider;
   }
@@ -100,25 +103,28 @@
   }
 
   &__description {
-    @extend .underdog-regular;
+    @extend %underdog-regular;
+
     text-align: justify;
     font-style: italic;
   }
 
   &__effects {
-    @extend .underdog-regular;
+    @extend %underdog-regular;
+
     text-align: justify;
     font-size: 0.7rem;
-    padding: 0rem;
+    padding: 0;
     color: colors.$c-black;
     background-color: colors.$form-content-bg;
   }
 
   &__effects-title {
-    @extend .protest-revolution-regular;
+    @extend %protest-revolution-regular;
+
     text-align: justify;
     font-size: 0.8rem;
-    padding: 0.01rem 0 0.01rem 0;
+    padding: 0.01rem 0;
     padding-top: 0.2rem;
     padding-bottom: 0.2rem;
     margin-bottom: 0.1875rem;
@@ -163,7 +169,7 @@
 
   &__group {
     margin: 1rem 0;
-    padding: 0.25rem 0.5rem 0.75rem 0.5rem;
+    padding: 0.25rem 0.5rem 0.75rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -218,7 +224,7 @@
 
   &__label {
     @include mixins.form-label-medium;
-    
+
     &--checkbox {
       @include mixins.checkbox-label;
     }
@@ -260,7 +266,7 @@
     background-color: colors.$select-option-bg;
     color: colors.$select-option-text;
     padding: 0.5rem;
-    
+
     &:hover {
       background-color: #1a365d; // Dark blue for hover state
     }
@@ -272,53 +278,58 @@
 
   &__color-input {
     @include mixins.grid-compliant-color-picker-compact;
+
     max-width: 15.625rem; // 250px
   }
-  
+
   &__color-picker-with-hex {
     @include mixins.grid-compliant-color-picker-with-hex;
-    
+
     .color-picker-label {
       @include mixins.form-label-base;
+
       margin-bottom: 0.375rem;
     }
-    
+
     .color-picker-container {
       @include mixins.color-picker-container;
     }
-    
+
     .color-preview {
       @include mixins.color-picker-preview;
     }
-    
+
     .color-picker {
       @include mixins.grid-compliant-color-picker;
+
       width: 3.125rem;
       height: 2.5rem;
       flex: 0 0 3.125rem;
     }
-    
+
     .hex-input {
       @include mixins.color-picker-hex-input;
     }
   }
-  
+
   &__toggle-switch {
     @include mixins.grid-compliant-toggle-switch;
+
     & ~ .toggle-switch-display {
       margin-left: auto; // Push to the right side of the container
       cursor: pointer; // Make it clear this is clickable
     }
   }
-  
+
   &__toggle-switch-left {
     @include mixins.grid-compliant-toggle-switch-left;
+
     & ~ .toggle-switch-display {
       margin-right: auto; // Push to the left side of the container
       cursor: pointer; // Make it clear this is clickable
     }
   }
-  
+
   // Style for groups containing toggle switches
   &__toggle-group {
     @include mixins.grid-compliant-toggle-group;
@@ -326,9 +337,8 @@
 
   &__button {
     @include mixins.grid-compliant-button;
-    
-    &--primary {
 
+    &--primary {
       &:hover {
         background-color: colors.$primary-button-hover;
         box-shadow: 0 0 0.9375rem 0.3125rem colors.$primary-button-glow;
@@ -344,7 +354,7 @@
     & + & {
       margin-left: 0.5rem;
     }
-    
+
     // Fixed-width variant
     &--fixed {
       width: auto;
@@ -375,6 +385,7 @@
   // Sheet-related elements
   &__sheet-header {
     @include flex-row;
+
     flex: 0 auto;
     overflow: hidden;
     flex-wrap: wrap;
