--- a/src/scss/global/_global-overrides.scss
+++ b/src/scss/global/_global-overrides.scss
@@ -50,7 +50,7 @@
   .sheet-tabs.tabs a[data-action="tab"].active {
     position: relative;
     background-color: transparent;
-    color: #ffffff;
+    color: #fff;
     border: none;
     z-index: 1;
     padding: 5px 15px;
@@ -59,10 +59,7 @@
     &::before {
       content: '';
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+      inset: 0;
       background-color: colors.$tab-active-bg;
       transform: skewX(-15deg);
       transform-origin: bottom;
@@ -80,10 +77,7 @@
     &::before {
       content: '';
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+      inset: 0;
       background-color: rgba(colors.$scrollbar-color, 0.1);
       transform: skewX(-15deg);
       transform-origin: bottom;
