--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -22,10 +22,12 @@
 @use 'components/effect-creator';
 @use 'components/sound-settings';
 @use 'components/data-table'; // DEPRECATED - use erps-data-tables instead
-@use 'components/erps-data-tables';
-@use 'components/erps-tabs';
 @use 'components/enhanced-grid';
 @use 'components/range-slider';
+
+// New components
+@use 'components/sheet/erps-data-tables';
+@use 'components/sheet/erps-tabs';
 
 // Import Google Fonts after ALL @use statements to avoid CSS parsing errors
 @import 'https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap';
